Reformatted Requirements section, adding hardware requirements and dividing up the requirements into subsections.

--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -30,7 +30,34 @@ A SmartProxy agent must configured in each storage location, and must be visible
 
 === Requirements
 
-To use {product-title}, the following requirements must be met:
+//Write intro.
+To use {product-title}, certain hardware, browser, and database requirements must be met in your environment. 
+
+
+==== Hardware Requirements
+
+The {product-title} appliance requires the following hardware at minimum:
+
+* 4 VCPUs
+* 8 GB RAM
+* 44 GB HDD + optional database disk
+
+==== Database Requirements
+
+Red Hat recommends allocating the virtual machine disk fully at the time of creation. Three main factors affect the size of your database over time:
+
+* Virtual Machine Count: the most important factor in the calculation of virtual machine database (VMDB) size over time.
+* Host Count: the number of hosts associated with the provider.
+* Storage Count: the number of individual storage elements as seen from the perspective of the provider or host. It is not the total number of virtual disks for all virtual machines.
+
+Use the following table as a guideline to calculate minimum requirements for your dataebase:
+
+image:5780.png[]
+
+
+==== Browser Requirements
+
+To use {product-title}, the following browser requirements must be met:
 
 * One of the following web browsers:
 ** Mozilla Firefox for versions supported under Mozilla's Extended Support Release (ESR)
@@ -38,14 +65,21 @@ To use {product-title}, the following requirements must be met:
 ** Google Chrome for Business
 * A monitor with minimum resolution of 1280x1024.
 * Adobe Flash Player 9 or above. At the time of publication, you can access it at http://www.adobe.com/products/flashplayer/
-* The {product-title} appliance must already be installed and activated in your enterprise environment.
-* The SmartProxy must have visibility to the virtual machines and cloud instances that you want to control.
-* The resources that you want to control must have a SmartProxy associated with them.
+
 
 [IMPORTANT]
 ======
 Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, {product-title} does not guarantee that the browser's *Back* button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
 ======
+
+==== Additional Requirements
+
+Additionally, the following must be configured to use {product-title}:
+
+* The {product-title} appliance must already be installed and activated in your enterprise environment.
+* The SmartProxy must have visibility to the virtual machines and cloud instances that you want to control.
+* The resources that you want to control must have a SmartProxy associated with them.
+
 
 === Terminology
 
