applied SME feedback

--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -30,12 +30,12 @@ A SmartProxy agent must configured in each storage location, and must be visible
 
 === Requirements
 
-To use {product-title}, certain hardware, browser, and database requirements must be met in your environment. 
+To use {product-title}, certain virtual hardware, database, and browser requirements must be met in your environment. 
 
 
-==== Hardware Requirements
+==== Virtual Hardware Requirements
 
-The {product-title} appliance requires the following hardware at minimum:
+The {product-title} appliance requires the following virtual hardware at minimum:
 
 * 4 VCPUs
 * 8 GB RAM
