--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -49,7 +49,7 @@ Red Hat recommends allocating the virtual machine disk fully at the time of crea
 * Host Count: the number of hosts associated with the provider.
 * Storage Count: the number of individual storage elements as seen from the perspective of the provider or host. It is not the total number of virtual disks for all virtual machines.
 
-Use the following table as a guideline to calculate minimum requirements for your dataebase:
+Use the following table as a guideline to calculate minimum requirements for your database:
 
 image:5780.png[]
 
