updated hardware requirements to installing on X guides

--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -32,7 +32,7 @@ endif::cfme[]
 
 In order to upload the {product-title} appliance file to Microsoft Azure, ensure the following requirements are met:
 
-* Approximately 2 GB of space for each VHD image; 40+ GB for the {product-title} appliance.
+* Approximately 2 GB of space for each VHD image; 44+ GB of space, 8 GB RAM, and 4 VCPUs for the {product-title} appliance.
 * Administrator access to the Azure portal.
 * Depending on your infrastructure, allow time for the upload.
 
