--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/topics/installation.adoc
@@ -32,6 +32,8 @@ endif::cfme[]
 Uploading the {product-title} appliance file onto Red Hat Enterprise Virtualization Management systems has the following requirements:
 
 * 44 GB of storage space on both the export domain and the local partition where `/tmp` resides since the `OVF` archive is locally expanded into that directory.
+* 8 GB RAM.
+* 4 VCPUs.
 * Install the `rhevm-image-uploader` package containing the `engine-image-uploader` script to your local machine.
 +
 ----
