--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -173,7 +173,7 @@ Zones:: {product-title} Infrastructure can be organized into zones to configure 
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
 
 ifdef::cfme[]
-=== Getting Help and Giving Feedback
+=== Getting Help with Red Hat CloudForms
 
 If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at http://access.redhat.com. Through the Customer Portal, you can:
 
@@ -183,15 +183,6 @@ If you experience difficulty with a procedure described in this documentation, v
 
 Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology.
 You can find a list of publicly available mailing lists at https://www.redhat.com/mailman/listinfo. Click on the name of any mailing list to subscribe to that list or to access the list archives.
-
-=== Documentation Feedback
-
-If you find a typographical error in this manual, or if you have thought of a way to make this manual better, please submit a report to GSS through the customer portal.
-
-When submitting a report, be sure to mention the manual's identifier: `Deployment Planning Guide`
-
-If you have a suggestion for improving the documentation, try to be as specific as possible when describing it.
-If you have found an error, please include the section number and some of the surrounding text so we can find it easily.
 endif::cfme[]
 
 
