edited Getting Support title to match release notes section

--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -173,7 +173,7 @@ Zones:: {product-title} Infrastructure can be organized into zones to configure 
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
 
 ifdef::cfme[]
-=== Getting Help with Red Hat CloudForms
+=== Getting Support
 
 If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at http://access.redhat.com. Through the Customer Portal, you can:
 
