draft edits for providers guide intro - wip

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -14,6 +14,18 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 
+What is a provider in CloudForms?
+
+From http://manageiq.org/documentation/development/architecture/providers_overview/
+
+Providers are management systems that integrate with {product-title}.
+
+any system that {product-title} integrates with for the purpose of collecting data and performing operations.
+
+You can add your providers into CloudForms and use CloudForms to manage and provision your resources (hosts, VMs etc) from a single unified platform.
+
+There are several different types (categories?) of providers Compute, Configuration Management, Networking
+
 :leveloffset: 1
 include::topics/Infrastructure_Providers.adoc[]
 
