--- a/doc-Integration_with_ServiceNow/topics/Use_Cases.adoc
+++ b/doc-Integration_with_ServiceNow/topics/Use_Cases.adoc
@@ -15,7 +15,7 @@ image:6667.png[StateActiveCMDBActiveCMDBstate]
 
 === Virtual Machine Retirement
 
-The Cloud and Infrastructure default *Retirement* State Machines contain *DeactivateCMDB* and *RemoveFromCMDB* states.
+The Cloud and Infrastructure default *Retirement* State Machines contain the *DeactivateCMDB* state.
 
 To update a virtual machine's ServiceNow record during virtual machine retirement, amend the *DeactivateCMDB* state to call the `update_patch` method, for example:
 [subs="verbatim,attributes"]
@@ -23,14 +23,6 @@ To update a virtual machine's ServiceNow record during virtual machine retiremen
 Integration/ServiceNow/CMDB/update_patch?description=VM%20${/#vm.guid}%20retired%20from%20{productname_short}
 -------
 image:6668.png[StateActiveCMDBDeactiveCMDBstate]
-
-
-To delete a virtual machine's ServiceNow record during virtual machine retirement, amend the *RemoveFromCMDB* state to call the `delete` method, for example:
--------
-/Integration/ServiceNow/CMDB/delete
--------
-image:6669.png[StateRemoveFromCMDBRemovefromCMDBstate] 
-
 
 === Virtual Machine Reconfiguration (VMware Only)
 
