removed drop-down for CF style

--- a/common/provider-ose-add-container.adoc
+++ b/common/provider-ose-add-container.adoc
@@ -1,7 +1,7 @@
 . Navigate to menu:Compute[Containers > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add a New Containers Provider] (*Add a New Containers Provider*).
 . Enter a *Name* for the provider.
-. From the *Type* drop-down list, select *OpenShift Enterprise*.
+. From the *Type* list, select *OpenShift Enterprise*.
 . Enter the appropriate *Zone* for the provider. By default, the zone is set to `default`.
 . Enter the *Hostname or IP address* of the provider.
 +
