more LDAP edits

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -919,10 +919,12 @@ There are two ways to use LDAP groups with {product-title}:
 . Navigate to menu:Settings[Configuration].
 . Click the *Access Control* accordion, then click *Groups*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new Group*) to create a group.
-. Enter a description for the group in *Description*. (REMOVE?)
-. There are two ways to specify the group to use:
-* In the *Description* field, enter the canonical name (`cn`) for a valid LDAP group assigned to users requiring access to {product-title}.
-* Select *Look Up LDAP Groups* to find a list of groups assigned to a specific user in LDAP, then use the *LDAP Group for User* dropdown list to choose a group.
+. There are two ways to specify the group to use: (EDIT)
+* In the *Description* field, enter the (common name (`cn`) for) your existing LDAP group assigned to users requiring access to {product-title}.
+* Select *Look Up LDAP Groups* to bring up the *LDAP Group Look Up* options.
+.. In *User to Look Up*, enter the common name (`cn`) for a user in your LDAP group.
+.. In *Username*, enter the (distinguished name?)
+.. In *Password*, enter the user's password. Click *Retrieve*.
 . Select a *Role* to map to the group.
 . Select a *Project/Tenant* to map to the group.
 +
