--- a/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -59,7 +59,7 @@ The adminURL endpoint must be accessible to the {product-title} Appliance that i
 [[openstack-events-uc]]
 == Configuring the Undercloud to Store Events
 
-To allow {product-title} to receive events from a Red Hat OpenStack Platform environment, you must configure the *notification_driver* option for the Compute service and Orchestration service in that environment. To do so, edit _undercloud.conf_, and set _store_events_ to _true_ before installing the undercloud. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/chapter-4-installing-the-undercloud[Installing the Undercloud] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/46-configuring-the-director[Configuring the Director] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/director-installation-and-usage[Red Hat OpenStack Director Installation and Usage] for related details.
+To allow {product-title} to receive events from a Red Hat OpenStack Platform environment, you must configure the *notification_driver* option for the Compute service and Orchestration service in that environment. To do so, edit _undercloud.conf_, and set _store_events_ to _true_ before installing the undercloud. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/director-installation-and-usage/#chap-Installing_the_Undercloud[Installing the Undercloud] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/director-installation-and-usage/#sect-Configuring_the_Director[Configuring the Director] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/director-installation-and-usage[Red Hat OpenStack Director Installation and Usage] for related details.
 
 
 
