removed MS SQL references as not supported

--- a/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
@@ -226,7 +226,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            CFME appliance running the VMDB (or MS SQL)
+                            CFME appliance running the VMDB
 
 
 |
@@ -236,13 +236,13 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            5432 (1433 MS SQL)
+                            5432
 
 
 |
 |
 
-                            CFME appliance connectivity to the CFME Database (PostgreSQL or MS SQL)
+                            CFME appliance connectivity to the CFME Database (PostgreSQL)
 
 
 
@@ -263,7 +263,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            5432 (1433 MS SQL)
+                            5432
 
 
 |
@@ -1303,7 +1303,7 @@ The following table lists the appliance's main services and their respective por
 |
 
 
-			    CFME appliance connectivity to the Database (MS SQL)
+			    CFME appliance connectivity to the Database 
 
 
 
@@ -1487,7 +1487,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-			    CFME appliance connectivity to the Database (MS SQL)
+			    CFME appliance connectivity to the Database
 
 
 
